# pong-game

./: CMakeLists.txt  LICENSE  README.md  gui.py  pong.yaml  pong_gui.py  server.cpp
client_template/: CMakeLists.txt  pong.cpp
include/duels/pong/: game.h  mechanics.h  msg.h  msg_detail.h  pong_ai.h
